--- a/index.html
+++ b/index.html
@@ -1,9 +1,28 @@
 <!DOCTYPE html>
-<html lang="en">
+<html itemscope lang="fr">
     <head>
+        <!-- Base -->
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Key Performance Indicator | Human Centered Design</title>
+        <meta name="description" content="KPI ou ICP, est une donnée renseignant sur le rendement et l'efficacité d'un projet.">
+        <meta name="author" content="Benjamin Dos Santos">
+        <meta name="robots" content="index, nofollow">
+        <!-- Google / Search Engine Tags -->
+        <meta itemprop="name" content="Key Performance Indicator | Human Centered Design">
+        <meta itemprop="description" content="Indicateur clé de performance (ICP) en français, est une donnée renseignant sur le rendement et l'efficacité d'un projet.">
+        <meta itemprop="image" content="https://benjamindossantos.be/projets/hcd/assets/preview.png">
+        <!-- Facebook Meta Tags -->
+        <meta property="og:url" content="https://benjamindossantos.be/projets/hcd">
+        <meta property="og:type" content="website">
+        <meta property="og:title" content="Key Performance Indicator | Human Centered Design">
+        <meta property="og:description" content="Indicateur clé de performance (ICP) en français, est une donnée renseignant sur le rendement et l'efficacité d'un projet.">
+        <meta property="og:image" content="https://benjamindossantos.be/projets/hcd/assets/preview.png">
+        <!-- Twitter Meta Tags -->
+        <meta name="twitter:card" content="summary_large_image">
+        <meta name="twitter:title" content="Key Performance Indicator | Human Centered Design">
+        <meta name="twitter:description" content="Indicateur clé de performance (ICP) en français, est une donnée renseignant sur le rendement et l'efficacité d'un projet.">
+        <meta name="twitter:image" content="https://benjamindossantos.be/projets/hcd/assets/preview.png">
         <!-- Favicon -->
         <link rel="apple-touch-icon" sizes="57x57" href="assets/favicon/apple-icon-57x57.png">
         <link rel="apple-touch-icon" sizes="60x60" href="assets/favicon/apple-icon-60x60.png">
@@ -34,7 +53,7 @@
             <h2 class="title title--medium">Key<br> Performance<br> Indicator</h2>
             <div class="container container--noImage">
                 <p>
-                    Key Performance Indicator ou KPI sont des mesures quantitatives qui permettent d’évaluer les
+                    Key Performance Indicators ou KPIs sont des mesures quantitatives qui permettent d’évaluer les
                     performances et l’efficacité du site, avec les résultats, on peut voir si les objectifs sont
                     atteints.
                 </p>
@@ -119,7 +138,7 @@
                             beaucoup d’utilisateurs qui ont rebondis peut être une bonne chose comme une mauvaise.
                         </p>
                     </div>
-                    <img class="container__img container__img--bigger" src="assets/images/rebond.svg" alt="">
+                    <img class="container__img container__img--bigger" src="assets/images/rebond.svg" alt="Illustration taux de rebond">
                 </div>
             </section>
             <!-- Page load -->
@@ -140,7 +159,7 @@
                             Avoir un temps de chargement court demande plusieurs optimisations et du temps, néanmoins,
                             c’est une étape primordiale pour avoir un site performant. Et puis après toutes ces
                             optimisations, vous serez peut-être récompensé d’un magnifique 100 sur
-                            <a class="link link--blue" href="https://developers.google.com/speed/pagespeed/insights/">Google Page Insight</a>.
+                            <a class="link link--blue" href="https://developers.google.com/speed/pagespeed/insights" target="_blank" rel="noopener noreferrer">Google Page Insight</a>.
                         </p>
                     </div>
                     <img class="container__img" src="assets/images/page-load.svg" alt="Illustration page load">
@@ -195,8 +214,11 @@
         <footer class="section section--black">
             <ul class="list list--uppercase">
                 <li class="list__item">Réalisé avec &hearts;</li>
-                <li class="list__item">Par<a class="link" href="https://benjamindossantos.be"> Benjamin Dos santos</a></li>
-                <li class="list__item"><a class="link" href="http://dwm.re">DWM</a> | <a class="link" href="https://www.heaj.be/fr">HEAJ</a> &copy;</li>
+                <li class="list__item">Par<a class="link" href="https://benjamindossantos.be" target="_blank" rel="noopener noreferrer"> Benjamin Dos santos</a></li>
+                <li class="list__item">
+                    <a class="link" href="http://dwm.re" target="_blank" rel="noopener noreferrer">DWM</a> |
+                    <a class="link" href="https://www.heaj.be/fr" target="_blank" rel="noopener noreferrer">HEAJ</a> &copy;
+                </li>
             </ul>
         </footer>
     </body>
