fix a/b tests content + link color

--- a/index.html
+++ b/index.html
@@ -171,12 +171,13 @@
                 <div class="container container--reverse">
                     <div class="container__textBox">
                         <p>
-                            Les KPIs donnent accès à des données quantitatives qui permettent d’améliorer le projet
-                            contrairement aux données qualitatives qui permettent de penser le projet.
+                            Le principe de ces tests est de mettre à disposition plusieurs versions différentes du site (deux ou plus). Permettant
+                            de voir quelle version est la plus efficace. Le but étant de mettre en place une version plus performante et obtenant
+                            plus de taux de conversion.
                         </p>
                         <p>
-                            Il est essentiel de penser le projet sur base des données qualitatives au risque de récolter les
-                            données quantitatives qui ne serviront pas à grand-chose étant donné que le projet ne sera pas bon.
+                            Pour que ces tests soient pertinents et intéressants, l’A/B Test doit être effectuer sur des sites avec beaucoup de
+                            visite.
                         </p>
                     </div>
                     <img class="container__img" src="assets/images/ab-testing.svg" alt="Illustration A/B Testing">
